--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,7 +3,7 @@ src = 'src'                                             # the source directory
 test = 'src/test'                                       # the test directory
 script = 'scripts'                                      # the script directory
 out = 'artifacts/src'                                   # the output directory (for artifacts)
-libs = []                                                     # a list of library directories
+libs = ["lib"]                                          # the library directory
 remappings = []                                               # a list of remappings
 libraries = []                                                # a list of deployed libraries to link against
 cache = true                                                  # whether to cache builds or not
