--- a/.github/workflows/intermediate-docker.yml
+++ b/.github/workflows/intermediate-docker.yml
@@ -34,12 +34,12 @@ jobs:
     - name: Build
       run: |
         make all
-      environment:
+      env:
         GO_VERSION: ${{ inputs.GO_VERSION }}
         RUST_VERSION: ${{ inputs.RUST_VERSION }}
     - name: Publish
       run: |
         make publish
-      environment:
+      env:
         GO_VERSION: ${{ inputs.GO_VERSION }}
         RUST_VERSION: ${{ inputs.RUST_VERSION }}
