--- a/.github/workflows/bridge_history_api.yml
+++ b/.github/workflows/bridge_history_api.yml
@@ -1,4 +1,4 @@
-name: BridgeHistoryApi
+name: BridgeHistoryAPI
 
 on:
   push:
@@ -73,4 +73,3 @@ jobs:
         if [ -n "$(git status --porcelain)" ]; then
           exit 1
         fi
-
