--- a/common/Makefile
+++ b/common/Makefile
@@ -5,4 +5,4 @@ test:
 
 lint: ## Lint the files - used for CI
 	GOBIN=$(PWD)/build/bin go run ../build/lint.go
-	cd libzkp/impl && cargo fmt --all -- --check
+	cd libzkp/impl && cargo fmt --all -- --check && cargo clippy --release -- -D warnings
