build: Update golang-ci version to v1.52.2 and go version to v1.19.x (#525)
Co-authored-by: HAOYUatHZ <37070449+HAOYUatHZ@users.noreply.github.com>
Co-authored-by: HAOYUatHZ <haoyu@protonmail.com>

--- a/coordinator/Makefile
+++ b/coordinator/Makefile
@@ -35,6 +35,7 @@ test-gpu-verifier: libzkp
 	go test -tags="gpu ffi" -timeout 0 -v ./verifier
 
 lint: ## Lint the files - used for CI
+	cp -r ../common/libzkp/interface ./verifier/lib
 	GOBIN=$(PWD)/build/bin go run ../build/lint.go
 
 clean: ## Empty out the bin folder
