--- a/bridge/conf/config.json
+++ b/bridge/conf/config.json
@@ -74,15 +74,14 @@
     },
     "chunk_proposer_config": {
       "max_gas_per_chunk": 1000000,
-      "max_tx_num_chunk": 1000,
+      "max_l2tx_num_chunk": 1000,
       "max_payload_size_per_chunk": 100000,
       "min_payload_size_per_chunk": 10000
     },
     "batch_proposer_config": {
-      "max_gas_per_chunk": 10000000,
-      "max_tx_num_chunk": 10000,
-      "max_payload_size_per_chunk": 1000000,
-      "min_payload_size_per_chunk": 100000
+      "max_payload_size_per_batch": 1000000,
+      "min_payload_size_per_batch": 100000,
+      "max_chunk_num_per_batch": 100
     }
   },
   "db_config": {
