--- a/.github/workflows/bridge_history_api.yml
+++ b/.github/workflows/bridge_history_api.yml
@@ -53,6 +53,12 @@ jobs:
       run: |
         go get ./...
         make test
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      with:
+        flags: bridge-history-api
   goimports-lint:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
