--- a/.github/workflows/coordinator.yml
+++ b/.github/workflows/coordinator.yml
@@ -110,4 +110,10 @@ jobs:
     - name: Test coordinator packages
       working-directory: 'coordinator'
       run: |
-        go test -v -race -gcflags="-l" -ldflags="-s=false" -covermode=atomic -tags mock_verifier ./...
+        go test -v -race -gcflags="-l" -ldflags="-s=false" -coverprofile=coverage.txt -covermode=atomic -tags mock_verifier ./...
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      with:
+        flags: coordinator
