--- a/codecov.yml
+++ b/codecov.yml
@@ -11,33 +11,33 @@ flag_management:
         - type: project
           target: auto
           threshold: 1%
-#    - name: bridge-history-api
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
-#    - name: common
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
-#    - name: coordinator
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
-#    - name: database
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
-#    - name: integration
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
-#    - name: roller
-#      statuses:
-#        - type: project
-#          target: auto
-#          threshold: 1%
+    - name: bridge-history-api
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+    - name: common
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+    - name: coordinator
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+    - name: database
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+    - name: integration
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+    - name: roller
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
