feat(codecov): Add scroll unit test coverage tool (#574)

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -40,4 +40,4 @@ jobs:
         make -C common/bytecode all
     - name: Run integration tests
       run: |
-        go test -v -tags="mock_prover mock_verifier" -p 1 scroll-tech/integration-test/...
+        go test -v -tags="mock_prover mock_verifier" -p 1 -coverprofile=coverage.txt scroll-tech/integration-test/...
