--- a/.github/workflows/coordinator.yml
+++ b/.github/workflows/coordinator.yml
@@ -110,6 +110,7 @@ jobs:
     - name: Test coordinator packages
       working-directory: 'coordinator'
       run: |
+        # go test -exec "env LD_LIBRARY_PATH=${PWD}/verifier/lib" -v -race -gcflags="-l" -ldflags="-s=false" -coverpkg="scroll-tech/coordinator" -coverprofile=coverage.txt -covermode=atomic ./...
         go test -v -race -gcflags="-l" -ldflags="-s=false" -coverprofile=coverage.txt -covermode=atomic -tags mock_verifier ./...
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
