feat(bridge-history-api): support let user relay l2 msg  (#563)
Co-authored-by: vincent <419436363@qq.com>
Co-authored-by: georgehao <haohongfan@gmail.com>
Co-authored-by: HAOYUatHZ <37070449+HAOYUatHZ@users.noreply.github.com>

--- a/bridge-history-api/config.json
+++ b/bridge-history-api/config.json
@@ -1,4 +1,8 @@
 {
+	"batchInfoFetcher": {
+		"batchIndexStartBlock": 9091265,
+		"ScrollChainAddr": "0xcD00DB804C819175B381b2B44Aa16A391c8a01D6"
+	},
 	"l1": {
 		"confirmation": 64,
 		"endpoint": "https://rpc.ankr.com/eth_goerli",
