--- a/miner-api/Makefile
+++ b/miner-api/Makefile
@@ -5,3 +5,6 @@ build:
 
 clean: ## Empty out the bin folder
 	@rm -rf build/bin
+
+test:
+	go test -v -race -coverprofile=coverage.txt -covermode=atomic -p 1 $(PWD)/...
