--- a/miner-api/Makefile
+++ b/miner-api/Makefile
@@ -7,4 +7,4 @@ clean: ## Empty out the bin folder
 	@rm -rf build/bin
 
 test:
-	go test -v -race -coverprofile=coverage.txt -covermode=atomic -p 1 $(PWD)/...
+	go test -v $(PWD)/...
