--- a/.github/workflows/miner_api.yml
+++ b/.github/workflows/miner_api.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Install goimports
         run: go install golang.org/x/tools/cmd/goimports
       - run: goimports -local scroll-tech/miner-api/ -w .
-      - run: go mod tidy
+      # - run: go mod tidy
       # If there are any diffs from goimports or go mod tidy, fail.
       - name: Verify no changes from goimports and go mod tidy
         run: |
