--- a/.github/workflows/miner_api.yml
+++ b/.github/workflows/miner_api.yml
@@ -73,8 +73,8 @@ jobs:
       - run: goimports -local scroll-tech/miner-api/ -w .
       # - run: go mod tidy
       # If there are any diffs from goimports or go mod tidy, fail.
-      - name: Verify no changes from goimports and go mod tidy
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            exit 1
-          fi
+#      - name: Verify no changes from goimports and go mod tidy
+#        run: |
+#          if [ -n "$(git status --porcelain)" ]; then
+#            exit 1
+#          fi
