--- a/prover-stats-api/Makefile
+++ b/prover-stats-api/Makefile
@@ -1,7 +1,7 @@
 .PHONY: clean build test
 
 build:
-	GOBIN=$(PWD)/build/bin go build -o $(PWD)/build/bin/miner-api ./cmd
+	GOBIN=$(PWD)/build/bin go build -o $(PWD)/build/bin/prover-stats-api ./cmd
 
 clean: ## Empty out the bin folder
 	@rm -rf build/bin
