--- a/bridge/conf/config.json
+++ b/bridge/conf/config.json
@@ -78,7 +78,8 @@
       "max_l1_commit_gas_per_chunk": 11234567,
       "max_l1_commit_calldata_size_per_chunk": 112345,
       "min_l1_commit_calldata_size_per_chunk": 11234,
-      "chunk_timeout_sec": 300
+      "chunk_timeout_sec": 300,
+      "max_row_consumption_per_chunk": 1048319
     },
     "batch_proposer_config": {
       "max_chunk_num_per_batch": 112,
