feat: update prover stats api some files

--- a/prover-stats-api/Makefile
+++ b/prover-stats-api/Makefile
@@ -6,5 +6,8 @@ build:
 clean: ## Empty out the bin folder
 	@rm -rf build/bin
 
+swag:
+	swag init -g ./cmd/main.go
+
 test:
 	go test -v $(PWD)/...
