--- a/prover-stats-api/conf/config.json
+++ b/prover-stats-api/conf/config.json
@@ -1,9 +1,12 @@
 {
   "db_config": {
     "driver_name": "postgres",
-    "dsn": "postgres://admin:123456@localhost/test?sslmode=disable",
+    "dsn": "postgres://localhost/scroll?sslmode=disable",
     "maxOpenNum": 200,
     "maxIdleNum": 20
   },
-  "api_secret": "test-api"
+  "auth": {
+    "secret": "prover secret key",
+    "token_expire_duration": 3600
+  }
 }
