--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -1,7 +1,7 @@
 {
-  "roller_manager_config": {
+  "prover_manager_config": {
     "compression_level": 9,
-    "rollers_per_session": 1,
+    "provers_per_session": 1,
     "session_attempts": 2,
     "collection_time": 180,
     "token_time_to_live": 60,
