--- a/roller/config.json
+++ b/roller/config.json
@@ -1,7 +1,7 @@
 {
-    "roller_name": "my_roller",
+    "prover_name": "my_prover",
     "keystore_path": "keystore.json",
-    "keystore_password": "roller-pwd",
+    "keystore_password": "prover-pwd",
     "coordinator_url": "ws://localhost:8391",
     "db_path": "bbolt_db",
     "prover": {
