--- a/prover/Makefile
+++ b/prover/Makefile
@@ -20,8 +20,8 @@ endif
 
 libzkp:
 	cd ../common/libzkp/impl && cargo clean && cargo build --release && cp ./target/release/libzkp.so ../interface/
-	rm -rf ./prover/lib && cp -r ../common/libzkp/interface ./prover/lib
-	find ../common | grep libzktrie.so | xargs -I{} cp {} ./prover/lib/
+	rm -rf ./core/lib && cp -r ../common/libzkp/interface ./core/lib
+	find ../common | grep libzktrie.so | xargs -I{} cp {} ./core/lib/
 
 prover: libzkp ## Build the Prover instance.
 	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/prover ./cmd
@@ -42,7 +42,7 @@ lastest-zk-version:
 	curl -sL https://api.github.com/repos/scroll-tech/scroll-prover/commits | jq -r ".[0].sha"
 
 lint: ## Lint the files - used for CI
-	cp -r ../common/libzkp/interface ./prover/lib
+	cp -r ../common/libzkp/interface ./core/lib
 	GOBIN=$(PWD)/build/bin go run ../build/lint.go
 
 clean: ## Empty out the bin folder
