--- a/prover/Makefile
+++ b/prover/Makefile
@@ -26,7 +26,7 @@ libzkp:
 prover: libzkp ## Build the Prover instance.
 	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/prover ./cmd
 
-mock_prover: ## Build the mocked Prover instance.
+mock-prover: ## Build the mocked Prover instance.
 	GOBIN=$(PWD)/build/bin go build -tags="mock_prover mock_verifier" -o $(PWD)/build/bin/prover ./cmd
 
 gpu-prover: libzkp ## Build the GPU Prover instance.
