--- a/prover/Makefile
+++ b/prover/Makefile
@@ -1,4 +1,4 @@
-.PHONY: lint docker clean roller mock_roller
+.PHONY: lint docker clean prover mock_prover
 
 ifeq (4.3,$(firstword $(sort $(MAKE_VERSION) 4.3)))
 	ZKEVM_VERSION=$(shell grep -m 1 "scroll-prover" ../common/libzkp/impl/Cargo.lock | cut -d "#" -f2 | cut -c-7)
@@ -20,17 +20,17 @@ endif
 
 libzkp:
 	cd ../common/libzkp/impl && cargo clean && cargo build --release && cp ./target/release/libzkp.so ../interface/
-	rm -rf ./prover/lib && cp -r ../common/libzkp/interface ./prover/lib
-	find ../common | grep libzktrie.so | xargs -I{} cp {} ./prover/lib/
+	rm -rf ./core/lib && cp -r ../common/libzkp/interface ./core/lib
+	find ../common | grep libzktrie.so | xargs -I{} cp {} ./core/lib/
 
-roller: libzkp ## Build the Roller instance.
-	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/roller ./cmd
+prover: libzkp ## Build the Prover instance.
+	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/prover ./cmd
 
-mock_roller: ## Build the mocked Roller instance.
-	GOBIN=$(PWD)/build/bin go build -tags="mock_prover mock_verifier" -o $(PWD)/build/bin/roller ./cmd
+mock-prover: ## Build the mocked Prover instance.
+	GOBIN=$(PWD)/build/bin go build -tags="mock_prover mock_verifier" -o $(PWD)/build/bin/prover ./cmd
 
-gpu-roller: libzkp ## Build the GPU Roller instance.
-	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -tags gpu -o $(PWD)/build/bin/roller ./cmd
+gpu-prover: libzkp ## Build the GPU Prover instance.
+	GOBIN=$(PWD)/build/bin go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -tags gpu -o $(PWD)/build/bin/prover ./cmd
 
 test-prover: libzkp
 	go test -tags ffi -timeout 0 -v ./prover
@@ -42,7 +42,7 @@ lastest-zk-version:
 	curl -sL https://api.github.com/repos/scroll-tech/scroll-prover/commits | jq -r ".[0].sha"
 
 lint: ## Lint the files - used for CI
-	cp -r ../common/libzkp/interface ./prover/lib
+	cp -r ../common/libzkp/interface ./core/lib
 	GOBIN=$(PWD)/build/bin go run ../build/lint.go
 
 clean: ## Empty out the bin folder
