--- a/prover/config.json
+++ b/prover/config.json
@@ -1,10 +1,10 @@
 {
-    "roller_name": "my_roller",
+    "prover_name": "my_prover",
     "keystore_path": "keystore.json",
-    "keystore_password": "roller-pwd",
+    "keystore_password": "prover-pwd",
     "coordinator_url": "ws://localhost:8391",
     "db_path": "bbolt_db",
-    "prover": {
+    "core": {
         "params_path": "params",
         "seed_path": "seed"
     }
