Revert Verifier, and init both batch-verifier and chunk-verifier.

--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -10,7 +10,7 @@
       "params_path": "",
       "assets_path": ""
     },
-    "chunk_verifier_config": {
+    "verifier": {
       "mock_mode": true,
       "params_path": "",
       "assets_path": ""
