--- a/prover/config.json
+++ b/prover/config.json
@@ -4,11 +4,7 @@
     "keystore_password": "prover-pwd",
     "coordinator_url": "ws://localhost:8391",
     "db_path": "bbolt_db",
-    "batch_config": {
-        "params_path": "params",
-        "assets_path": "assets"
-    },
-    "chunk_config": {
+    "core": {
         "params_path": "params",
         "assets_path": "assets"
     }
