--- a/prover/config.json
+++ b/prover/config.json
@@ -2,10 +2,13 @@
     "prover_name": "my_prover",
     "keystore_path": "keystore.json",
     "keystore_password": "prover-pwd",
-    "coordinator_url": "ws://localhost:8391",
     "db_path": "bbolt_db",
     "core": {
         "params_path": "params",
         "seed_path": "seed"
+    },
+    "coordinator": {
+        "base_url": "https://coordinator/v1",
+        "timeout": 30
     }
 }
