feat: add random

--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -15,7 +15,7 @@
   },
   "db_config": {
     "driver_name": "postgres",
-    "dsn": "postgres://admin:123456@localhost/test?sslmode=disable",
+    "dsn": "postgres://localhost/scroll?sslmode=disable",
     "maxOpenNum": 200,
     "maxIdleNum": 20
   },
@@ -24,6 +24,7 @@
   },
   "auth": {
     "secret": "prover secret key",
-    "token_expire_duration": 3600
+    "random_expire_duration": 3600,
+    "login_expire_duration": 3600
   }
 }
