feat: integrate row consumption into chunk-proposer (#647)
Co-authored-by: colin <102356659+colinlyguo@users.noreply.github.com>
Co-authored-by: colinlyguo <colinlyguo@scroll.io>
Co-authored-by: Péter Garamvölgyi <peter@scroll.io>
Co-authored-by: HAOYUatHZ <37070449+HAOYUatHZ@users.noreply.github.com>
Co-authored-by: HAOYUatHZ <haoyu@protonmail.com>

--- a/bridge/conf/config.json
+++ b/bridge/conf/config.json
@@ -79,6 +79,7 @@
       "max_l1_commit_calldata_size_per_chunk": 112345,
       "min_l1_commit_calldata_size_per_chunk": 11234,
       "chunk_timeout_sec": 300,
+      "max_row_consumption_per_chunk": 1048319,
       "gas_cost_increase_multiplier": 1.2
     },
     "batch_proposer_config": {
