feat: change random to challenge

--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -24,7 +24,7 @@
   },
   "auth": {
     "secret": "prover secret key",
-    "random_expire_duration": 3600,
+    "challenge_expire_duration": 3600,
     "login_expire_duration": 3600
   }
 }
