feat: clear time duration unit

--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -3,7 +3,7 @@
     "compression_level": 9,
     "provers_per_session": 1,
     "session_attempts": 2,
-    "collection_time": 180,
+    "collection_time_sec": 180,
     "token_time_to_live": 60,
     "verifier": {
       "mock_mode": true,
@@ -24,7 +24,7 @@
   },
   "auth": {
     "secret": "prover secret key",
-    "challenge_expire_duration": 3600,
-    "login_expire_duration": 3600
+    "challenge_expire_duration_sec": 3600,
+    "login_expire_duration_sec": 3600
   }
 }
