--- a/prover/config.json
+++ b/prover/config.json
@@ -1,20 +1,20 @@
 {
-    "prover_name": "my_prover",
+    "prover_name": "prover-1",
     "keystore_path": "keystore.json",
     "keystore_password": "prover-pwd",
-    "db_path": "bbolt_db",
+    "db_path": "unique-db-path-for-prover-1",
     "core": {
         "params_path": "params",
-        "proof_type": 1
+        "proof_type": 2
     },
     "coordinator": {
-        "base_url": "https://sepolia-coordinator.scroll.io/",
+        "base_url": "http://localhost:8555",
         "retry_count": 10,
         "retry_wait_time_sec": 10,
         "connection_timeout_sec": 30
     },
     "l2geth": {
-        "endpoint": "http://sepolia-l2geth-rpc-internal1.scroll.tech:8545",
+        "endpoint": "http://localhost:9999",
         "confirmations": "0x1"
     }
 }
