--- a/coordinator/conf/config.json
+++ b/coordinator/conf/config.json
@@ -12,7 +12,7 @@
   },
   "db": {
     "driver_name": "postgres",
-    "dsn": "postgres://localhost/scroll?sslmode=disable",
+    "dsn": "postgres://admin:123456@localhost/test?sslmode=disable",
     "maxOpenNum": 200,
     "maxIdleNum": 20
   },
