Upgrade abi scripts

--- a/common/bytecode/Makefile
+++ b/common/bytecode/Makefile
@@ -1,9 +1,23 @@
-.PHONY: all erc20 greeter
+.PHONY: all erc20 greeter scroll
 
-all: erc20 greeter
+all: erc20 greeter scroll
 
 erc20:
-	go run github.com/scroll-tech/go-ethereum/cmd/abigen --combined-json ./erc20/ERC20Mock.json --pkg erc20 --out ./erc20/ERC20Mock.go
+	abigen --combined-json ./erc20/ERC20Mock.json --pkg erc20 --out ./erc20/ERC20Mock.go
 
 greeter:
-	go run github.com/scroll-tech/go-ethereum/cmd/abigen --combined-json ./greeter/Greeter.json --pkg greeter --out ./greeter/Greeter.go
+	abigen --combined-json ./greeter/Greeter.json --pkg greeter --out ./greeter/Greeter.go
+
+scroll:
+	# L1
+	./build_abi.sh L1
+	# L1/gateway
+	./build_abi.sh L1/gateway
+	# L1/rollup
+	./build_abi.sh L1/rollup
+	# L2
+	./build_abi.sh L2
+	# L2/gateway
+	./build_abi.sh L2/gateway
+	# L2/predeploys
+	./build_abi.sh L2/predeploys
