add prover-stats-api docker file

--- a/prover-stats-api/Makefile
+++ b/prover-stats-api/Makefile
@@ -1,4 +1,8 @@
-.PHONY: clean build test
+.PHONY: clean build test docker
+
+IMAGE_NAME=prover-stats-api
+IMAGE_VERSION=latest
+REPO_ROOT_DIR=./..
 
 build:
 	GOBIN=$(PWD)/build/bin go build -o $(PWD)/build/bin/prover-stats-api ./cmd
@@ -14,3 +18,6 @@ test:
 
 lint: ## Lint the files - used for CI
 	GOBIN=$(PWD)/build/bin go run ../build/lint.go
+
+docker:
+	DOCKER_BUILDKIT=1 docker build -t scrolltech/${IMAGE_NAME}:${IMAGE_VERSION} ${REPO_ROOT_DIR}/ -f ${REPO_ROOT_DIR}/build/dockerfiles/prover-stats-api.Dockerfile
